# ejabberd_examples_python

./: README.md  pyproject.toml  requirements.txt  simple_time_say.py
